Improve logging: INFO-only default, STOANDL_LOG=DEBUG verbose flag
logback.xml: BLE/protocol packet-level loggers default to INFO via
${STOANDL_LOG:-INFO}; permanently suppress high-frequency noise loggers.
Normal output shows only startup, scan, connect, notifications, and
PKJS lifecycle events (~10-20 lines/session).

PebbleIntegration: promote "Starting BLE scan" to log.info so it
appears in default output.

install.sh: accept -d flag to install a systemd drop-in that sets
STOANDL_LOG=DEBUG; re-running without -d removes the drop-in.

README: add Logging section documenting the default level and how to
enable verbose mode (env var, JVM flag, systemd drop-in).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>